# KingJamesPureBibleSearch

./: .gitignore  .gitmodules  .travis.yml  Jenkinsfile  LICENSE  README.md  real.travis.yml  travis_make_helper.sh
programs/: CMakeLists.txt  VS_VERSION_INFO.rc.in
programs/BibleDNA/: BibleDNA.pro  BibleText.cpp  BibleText.h  HebrewLetters.cpp  HebrewLetters.h  MainWindow.cpp  MainWindow.h  main.cpp
programs/CrossRefParse/: CMakeLists.txt  main.cpp
programs/ELSSearch/: CMakeLists.txt  ELSBibleDatabaseSelectDlg.cpp  ELSBibleDatabaseSelectDlg.h  ELSBibleDatabaseSelectDlg.ui  ELSResult.cpp  ELSResult.h  ELSSearch.cmake  ELSSearch.qrc  ELSSearchMainWindow.cpp  ELSSearchMainWindow.h  ELSSearchMainWindow.ui  FindELS.cpp  FindELS.h  LetterMatrix.cpp  LetterMatrix.h  LetterMatrixTableModel.cpp  LetterMatrixTableModel.h  main.cpp
programs/ELSSearch/docs/: Original_KJB-book-titles_with_updates_from_Gail_Riplinger.docx  Original_KJB_chapter_headings.docx
programs/HarExtract/: CMakeLists.txt  HarExtract.cpp
programs/InnoSetup/: Version.iss
programs/KJVCanOpener/: AboutDlg.cpp  AboutDlg.h  AboutDlg.ui  BibleDBListModel.cpp  BibleDBListModel.h  BibleDatabaseInfoDlg.cpp  BibleDatabaseInfoDlg.h  BibleDatabaseInfoDlg.ui  BibleLayout.cpp  BibleLayout.h  BibleWordDiffListModel.cpp  BibleWordDiffListModel.h  BrowserWidget.cpp  BrowserWidget.h  BrowserWidget.ui  BuildDB.cpp  BuildDB.h  BusyCursor.cpp  BusyCursor.h  CMakeLists.txt  CSV.cpp  CSV.h  CocoaDelegate.mm  ConfigBibleDatabase.ui  ConfigBrowserOptions.ui  ConfigCopyOptions.ui  ConfigDictDatabase.ui  ConfigDictionaryOptions.ui  ConfigGeneralSettings.ui  ConfigLocale.ui  ConfigSearchOptions.ui  ConfigTTSOptions.ui  ConfigTextFormat.ui  ConfigUserNotesDatabase.ui  Configuration.cpp  Configuration.h  CrossRefEditDlg.cpp  CrossRefEditDlg.h  CrossRefEditDlg.ui  DelayedExecutionTimer.cpp  (+204 more)
programs/KJVCanOpener-build-Desktop_Qt_4_8_4_32_lsb/: build-debug  build-release
programs/KJVCanOpener-build-Desktop_Qt_4_8_4_64_lsb/: build-debug  build-release
programs/KJVCanOpener-build-Desktop_Qt_4_8_5_32_lsb/: build-debug  build-release
programs/KJVCanOpener-build-Desktop_Qt_4_8_5_64_lsb/: build-debug  build-release
programs/KJVCanOpener/android/: AndroidManifest.xml
programs/KJVCanOpener/android-misc/: android_push.sh
programs/KJVCanOpener/darkstyle/: README.txt  (+2 more)
programs/KJVDataDump/: CMakeLists.txt  main.cpp
programs/KJVDataParse/: CMakeLists.txt  KJVDataParse.pro  kjvdataparse_en.ts  kjvdataparse_es.ts  kjvdataparse_fr.ts  main.cpp  xc_KJVDataParse.h
programs/KJVDictWord/: CMakeLists.txt  KJVDictWord.csv  KJVDictWord.ods  KJVDictWord.pro  main.cpp
programs/KJVDiff/: CMakeLists.txt  KJVDiff.pro  main.cpp
programs/KJVLookup/: CMakeLists.txt  KJVLookup.pro  main.cpp
programs/KJVPhraseDump/: CMakeLists.txt  main.cpp
programs/KJVPhraseSearch/: CMakeLists.txt  KJVPhraseSearch.pro  main.cpp
programs/KJVSearch/: CMakeLists.txt  KJVSearch.pro  main.cpp
programs/KJVSumThing/: CMakeLists.txt  KJVSumThing.pro  main.cpp
programs/MyBibleParse/: CMakeLists.txt  main.cpp
programs/build-KJVCanOpener-Qt_4_8_4_emscripten/: build-debug
programs/cmake/: GenerateVersion.cmake
programs/eSwordDecrypt/: eSwordDecrypt.c
programs/eSwordDecrypt2/: CMakeLists.txt  eSwordDecrypt.cpp  tables.h  twofish_opt2.cpp  twofish_opt2.h
programs/eSwordParse/: CMakeLists.txt  eSwordParse.pro  main.cpp
programs/emscripten_build_scripts/: build-debug  build-debug-clipboard
programs/kjfparse1/: kjfparse1.pro  main.cpp
programs/kjfparse2/: kjfparse2.pro  main.cpp
programs/kjvpceParse/: kjvpceParse.pro  main.cpp
programs/kmltest/: CMakeLists.txt  kmltest.cpp
programs/modeltest/: dynamictreemodel.h  modeltest.h  modeltest.pri
programs/qlitehtml/: CMakeLists.txt  container_qpainter.cpp  container_qpainter.h  qlitehtmlwidget.cpp  qlitehtmlwidget.h
programs/qt-speech/: QtSpeech  QtSpeech-dll.pro  QtSpeech-static.pro  QtSpeech.h  QtSpeech.pri  QtSpeech_ATO.h  QtSpeech_mac.cpp  QtSpeech_mac.h  QtSpeech_unx.cpp  QtSpeech_unx.h  QtSpeech_win.cpp  QtSpeech_win.h  get-festival-2.1.sh  get-festival-2.4.sh  get-festival-2.5.sh  get-festival.sh
programs/qtassetsmanager/: qabstractfileengine_p.h  qandroidassetsfileenginehandler.cpp  qandroidassetsfileenginehandler.h  qtassetsmanager.pri
programs/qtiocompressor/: common.pri
programs/qtsingleapplication/: common.pri
programs/qtstyleplugins/: .tag
programs/qwebchannel/: CMakeLists.txt  headlessSearchResults.cpp  headlessSearchResults.h  index.html  mmdblookup.cpp  mmdblookup.h  qwebchannel.cmake  qwebchannel.pri  webChannelBibleAudio.cpp  webChannelBibleAudio.h  webChannelGeoLocate.cpp  webChannelGeoLocate.h  webChannelObjects.cpp  webChannelObjects.h  webChannelSearchResults.cpp  webChannelSearchResults.h  webChannelServer.cpp  webChannelServer.h  websocketclientwrapper.h  websockettransport.cpp  websockettransport.h
programs/rv1602Pparse/: main.cpp  rv1602Pparse.pro
programs/rv1865parse/: main.cpp  rv1865parse.pro
programs/rv1865parse2/: main.cpp  rv1865parse2.pro
programs/rv1865parse3/: main.cpp  rv1865parse3.pro
programs/rvg2010parse/: main.cpp  rvg2010parse.pro
programs/singleapplication/: 81163-singleapplication-1.0.tar.bz2  CMakeLists.txt  singleapplication.cpp  singleapplication.h  singleapplication.pri  singleapplication_p.h
programs/webchannel/: googleapi.txt
programs/website/: index.html
programs/xmltest/: CMakeLists.txt  xmltest.cpp
support/wwWidgets/: CMakeLists.txt  qwwbreadcrumb.pri  qwwbuttonlineedit.pri  qwwclearlineedit.pri  qwwcolorbutton.pri  qwwcolorcombobox.pri  qwwconfigwidget.pri  qwwfilechooser.pri  qwwhuesatpicker.pri  qwwhuesatradialpicker.pri  qwwled.pri  qwwlistnavigator.pri  qwwlistwidget.pri  qwwloginbox.pri  qwwlongspinbox.pri  qwwnavigationbar.pri  qwwnumpad.pri  qwwresetlineedit.pri  qwwrichtextbutton.pri  qwwrichtextedit.pri  qwwtaskpanel.pri  qwwtextspinbox.pri  qwwtipwidget.pri  qwwtwocolorindicator.pri  widgets.pri  wwwidgets.prf  wwwidgets4.Info.plist  wwwidgets4.pro  wwwidgets_utils.pri
support/zlib/: CMakeLists.txt  zlib.h  zutil.h
(+716 files in other folders)
